[package]
name = "rs-engine"
version = "0.1.0"
authors = ["Jordan BRION <jrd.brion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29.0"
sdl2 = "0.32.2"
num = "0.2.0"
nalgebra-glm = "0.5.0"
jpeg-decoder = "0.1"
png = "0.15.2"